--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Paula Cardoso
 
 # Your name to show in the footer
-author: Some Person
+author: Paula Cardoso
 
 # --- List of links in the navigation bar --- #
 
