--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,20 @@ author: Paula Cardoso
 
 # --- List of links in the navigation bar --- #
 
+#navbar-links:
+ # About Me: "aboutme"
+  #Resources:
+   # - Beautiful Jekyll: "https://beautifuljekyll.com"
+    #- Learn markdown: "https://www.markdowntutorial.com/"
+  #Author's home: "https://paulastm.github.io/"
+
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
-
+  Publications:
+   # - Beautiful Jekyll: "https://beautifuljekyll.com"
+    #- Learn markdown: "https://www.markdowntutorial.com/"
+  Author's home: "https://paulastm.github.io/"
+  
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
