--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Paula Cardoso
 
 navbar-links:
   About Me: "aboutme"
-  Publications:
+  Publications: "publications"
    # - Beautiful Jekyll: "https://beautifuljekyll.com"
     #- Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://paulastm.github.io/"
@@ -35,7 +35,7 @@ navbar-links:
 avatar: "/img/pc.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-#round-avatar: true
+round-avatar: true
 
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
