--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ author: Paula Cardoso
   #Author's home: "https://paulastm.github.io/"
 
 navbar-links:
-  About Me: "aboutme"
+  #About Me: "aboutme"
   Publications: "publications"
    # - Beautiful Jekyll: "https://beautifuljekyll.com"
     #- Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://paulastm.github.io/"
+  #Author's home: "https://paulastm.github.io/"
   
 # --- Logo --- #
 
