--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: https://scholar.google.com.br/citations?user=5Z-OfTkAAAAJ&hl=pt-BR
+  google-scholar: citations?user=5Z-OfTkAAAAJ&hl=pt-BR
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
